<resources>
    <string name="app_name">众拓码头</string>
    <string name="home_qiandao">签到</string>
    <string name="loginName">用户名 :</string>
    <string name="login_pwd">密   码 :</string>
    <string name="edit_username">请输入用户名</string>
    <string name="edit_pwd">请输入密码</string>
    <string name="btn_login">登  录</string>
    <string name="btn_regist">注  册 </string>
    <string name="regist_name">用户名 :</string>
    <string name="regist_pwd">密 　码 :</string>
    <string name="regist_edit_pwd">请输入密码</string>
    <string name="regist_edit_name">请输入想注册的用户名</string>
    <string name="regist_yx">邮 　箱 :</string>
    <string name="regist_edit_yx">请输入邮箱信息</string>
    <string name="btn_regist_submit">注册</string>
    <string name="home_fragment">首页</string>
    <string name="makemoney_fragment">任务</string>
    <string name="try_fragment">游戏</string>
    <string name="mine_fragment">我的</string>
    <string name="mine_name">用户名:</string>
    <string name="mine_name_input">渣渣辉</string>
    <string name="userID">caoj2134221</string>
    <string name="tab1">抖音</string>
    <string name="tab2">快手</string>
    <string name="tab3">微博</string>
    <string name="tab4">小红书</string>
    <string name="team_fragment">团队</string>
    <string name="game_fragment">游戏</string>
    <string name="home">首页</string>
    <string name="mine_fragmen">我的</string>
    <string name="task_fragment">任务</string>
    <string name="teamFragment">团队页面</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
