<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/makeMoneyFragment"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/task_fragment" />
    <item
        android:id="@+id/teamFragment"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/team_fragment" />
    <item
        android:id="@+id/tryPlayFragment"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/game_fragment" />
    <item
        android:id="@+id/mineFragment"
        android:icon="@drawable/ic_mine"
        android:title="@string/mine_fragmen" />
</menu>